--- a/Aplicacao_Interativa/Views/ClienteDeslogado/Index.cshtml
+++ b/Aplicacao_Interativa/Views/ClienteDeslogado/Index.cshtml
@@ -18,7 +18,6 @@
 
 <head>
     <link href="@Url.Content("/css/IndexClienteCss.css")" rel="stylesheet"/>
-    <link href="@Url.Content("/css/style.css")" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -334,7 +333,35 @@
         </div>
       </section>
 
+        <section class="section" id="agendamentos">
+            <div class="container">
+                <h2 class="h2 section-title">Avaliações</h2>
 
+                @foreach (AvaliacaoModel avaliacao in ViewBag.Avaliacoes)
+                {
+                    <div class="card mt-3">
+                        <div class="card-body">
+                            <h6 class="card-title">Serviço realizado por @avaliacao.Agendamento?.Barbeiro</h6>
+                            <div class="avaliacao-estrelas">
+                                @for (int i = 1; i <= 5; i++)
+                                {
+                                    if (i <= avaliacao.Avaliacao)
+                                    {
+                                        <i class="star-fill bi bi-star-fill"></i>
+                                    }
+                                    else
+                                    {
+                                        <i class="star bi bi-star"></i>
+                                    }
+                                }
+                            </div>
+                            <p class="card-text">@avaliacao.Comentario</p>
+                            <p class="card-text text-end">Cliente: @avaliacao.Agendamento?.Usuario?.Nome</p>
+                        </div>
+                    </div>
+                }
+            </div>
+        </section>
 
 
 
