--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -44,10 +44,10 @@
 
                 <div class="d-flex justify-content-between align-items-center mt-3">
                     <div>
-                        <button id="btnEnviar" class="btn">Enviar</button>
+                        <button id="btnEnviar" class="btn btn-login">Enviar</button>
                     </div>
                     <div>
-                        <a class="btn" role="button" asp-controller="Cliente" asp-action="Index">Voltar</a>
+                        <a class="btn btn-secundary" role="button" asp-controller="Cliente" asp-action="Index">Voltar</a>
                     </div>
                 </div>
             </div>
