--- a/Aplicacao_Interativa/wwwroot/css/avaliar.css
+++ b/Aplicacao_Interativa/wwwroot/css/avaliar.css
@@ -3,30 +3,33 @@
     background-image: url('/img/hero-banner.jpg');
 }
 
-
-.button-container {
-    display: flex;
-    gap: 100px;
-    margin: 10px;
-}
-
 .btn:hover {
     color: white;
     background-color: var(--harvest-gold);
 }
 
-body::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: -1;
+    body::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: -1;
+    }
+
+label {
+    font-size: 18px;
 }
 
-.agendar {
+.form-control {
+    height: 40px;
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-14);
+}
+
+.avalia {
     max-width: 800px;
     margin: 200px auto;
     background-color: #fff;
@@ -35,57 +38,36 @@ body::before {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-label{
-    font-size: 20px;
-}
-
-.form-select {
-    height: 40px;
-    font-size: 15px;
-    font-family: var(--ff-oswald);
-    font-size: var(--fs-18);
-}
-
-/*Agendar.cshtml*/
-.selected {
-    background-color: var(--indian-yellow);
-    color: var(--white);
-    font-family: var(--ff-oswald);
-    font-size: var(--fs-14);
-    font-weight: var(--fw-600);
-    outline: none;
-}
-
-#calendario {
+.avaliacao {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 10px;
-}
-
-.btn-dia {
-    width: 80px;
-    height: 90px;
-    display: flex;
-    font-family: var(--ff-oswald);
-    font-size: var(--fs-14);
-    font-weight: var(--fw-600);
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
-    .btn-dia:hover {
-        background-color: var(--indian-yellow);
-        color: #fff;
+.star-icon {
+    list-style-type: none;
+    cursor: pointer;
+    color: #ffe500;
+    font-size: 40px;
+    margin: 0 5px;
+}
+
+    .star-icon::before {
+        content: "\2605";
     }
 
+    .star-icon.ativo ~ .star-icon::before {
+        content: "\2606";
+    }
 
+.avaliacao:hover .star-icon::before {
+    content: "\2605";
+}
 
+.star-icon:hover ~ .star-icon::before {
+    content: "\2606";
+}
 
 
 
