--- a/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
+++ b/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
@@ -1,22 +1,28 @@
 ﻿@model UsuarioModel
 
-<a class="navbar-brand" href="#">Olá, @Model.Nome</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" asp-controller="Cliente" asp-action="Index">Página Incial</a>
-        </li>
-        @if (Model.Perfil == Aplicacao_Interativa.Enums.PerfilEnum.Barbeiro)
+<nav class="navbar container" data-navbar>
+    <ul class="navbar-list">
+
+        @if (Model.Perfil == Aplicacao_Interativa.Enums.PerfilEnum.Cliente)
         {
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" asp-controller="Cadastro" asp-action="Criar">Cadastrar</a>
-            </li>        
+            <li class="navbar-item">
+                <a href="/Cliente/Index" class="navbar-link" data-nav-link>Home</a>
+            </li>
+
+            <li class="navbar-item">
+                <a href="#services" class="navbar-link" data-nav-link>Serviços</a>
+            </li>
+
+            <li class="navbar-item">
+                <a href="#pricing" class="navbar-link" data-nav-link>Planos & kits</a>
+            </li>
+
+            <li class="navbar-item">
+                <a href="#gallery" class="navbar-link" data-nav-link>Galeria</a>
+            </li>
         }
-        <li class="nav-item">
-          <a class="nav-link active" asp-controller="Login" asp-action="Sair">Sair</a>
+        <li class="navbar-item">
+            <a class="navbar-link" asp-controller="Cliente" asp-action="Perfil">Meu Perfil</a>
         </li>
-      </ul>
-    </div>
+    </ul>
+</nav>
