--- a/Aplicacao_Interativa/Views/Shared/_LayoutDeslogado.cshtml
+++ b/Aplicacao_Interativa/Views/Shared/_LayoutDeslogado.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Aplicacao_Interativa.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="~/css/header.css" asp-append-version="true" />
 </head>
 <div vw class="enabled">
     <div vw-access-button class="active"></div>
@@ -21,14 +22,117 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
 <body class="mb-0">
-    <header><script src="/js/header.js"></script></header>
-        <main role="main">
-            @RenderBody()
-        </main>
+    <header class="header">
+
+        <div class="header-top">
+            <div class="container">
+
+                <ul class="header-top-list mb-0">
+
+                    <li class="header-top-item">
+                        <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+
+                        <p class="item-title mb-0">Contato :</p>
+
+                        <a href="tel:01234567895" class="item-link">(31) 1234-5678</a>
+                    </li>
+
+                    <li class="header-top-item">
+                        <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+
+                        <p class="item-title mb-0">Funcionamento :</p>
+
+                        <p class="item-text mb-0">Segunda - Sábado 08:00 - 19:00</p>
+                    </li>
+
+                    <li>
+                        <ul class="social-list">
+
+                            <li>
+                                <a href="" class="social-link">
+                                    <ion-icon name="logo-facebook"></ion-icon>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="social-link">
+                                    <ion-icon name="logo-twitter"></ion-icon>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="social-link">
+                                    <ion-icon name="logo-youtube"></ion-icon>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="social-link">
+                                    <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="header-bottom" data-header>
+            <div class="container">
+
+                <a href="/ClienteDeslogado/Index" class="logo">
+                    Barber reach
+                    <span class="span">BARBEARIA</span>
+                </a>
+
+                <nav class="navbar container" data-navbar>
+                    <ul class="navbar-list">
+
+                        <li class="navbar-item">
+                            <a href="/ClienteDeslogado/Index" class="navbar-link" data-nav-link>Home</a>
+                        </li>
+
+                        <li class="navbar-item">
+                            <a href="#services" class="navbar-link" data-nav-link>Serviços</a>
+                        </li>
+
+                        <li class="navbar-item">
+                            <a href="#pricing" class="navbar-link" data-nav-link>Planos & kits</a>
+                        </li>
+
+                        <li class="navbar-item">
+                            <a href="#gallery" class="navbar-link" data-nav-link>Galeria</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <button class="nav-toggle-btn" aria-label="toggle menu" data-nav-toggler>
+                    <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+                </button>
+
+                <a href="/Login/Index" class="btn has-before">
+                    <span class="span">LOGIN E CADASTRO</span>
+
+                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                </a>
+
+            </div>
+        </div>
+
+    </header>
+        
+    <main role="main">
+        @RenderBody()
+    </main>
+
     <footer><script src="/js/footer.js"></script></footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/header.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
